force-app/main/default/objects/Reporting_Year__c/Reporting_Year__c.object-meta.xml
<CustomObject>
    <label>Donatore per Anno</label>
    <nameField>
        <label>Reporting Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donatori per Anno</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>