force-app/main/default/objects/Reporting_Year__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reporting Years</relationshipLabel>
    <relationshipName>Reporting_Years</relationshipName>
    <type>Lookup</type>
</CustomField>