force-app/main/default/objects/Reporting_Year__c/fields/Allocabile_formula__c.field-meta.xml
<CustomField>
    <fullName>Allocabile_formula__c</fullName>
    <formula>Totali_Donatore_Anno__r.Allocabile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocabile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>