force-app/main/default/objects/Reporting_Year__c/fields/Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount__c</fullName>
    <formula>Current_Year_Donation_Amount__c -  Total_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>