force-app/main/default/objects/Reporting_Year__c/fields/Current_Year_Donation_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Donation_Number__c</fullName>
    <label>Current Year Donation Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>