force-app/main/default/objects/Reporting_Year__c/fields/Donato_Originale_formula__c.field-meta.xml
<CustomField>
    <fullName>Donato_Originale_formula__c</fullName>
    <formula>Totali_Donatore_Anno__r.Donato_Originale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donato Originale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>