force-app/main/default/objects/Reporting_Year__c/fields/Total_Visits_done__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits_done__c</fullName>
    <label>Total Visits done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>