force-app/main/default/objects/Reporting_Year__c/fields/Totale_Allocato_formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato_formula__c</fullName>
    <formula>Totali_Donatore_Anno__r.Totale_Allocato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Allocato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>