force-app/main/default/objects/Reporting_Year__c/fields/Totale_Allocato_NON_Pagato_formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato_NON_Pagato_formula__c</fullName>
    <formula>Totali_Donatore_Anno__r.Totale_Allocato_NON_Pagato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Allocato NON Pagato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>