force-app/main/default/objects/Reporting_Year__c/fields/Totale_Durata_Visite_formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Durata_Visite_formula__c</fullName>
    <formula>Totali_Donatore_Anno__r.Totale_Durata_Visite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Durata Visite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>