force-app/main/default/objects/Reporting_Year__c/fields/Totale_Numero_di_Biglietti__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_di_Biglietti__c</fullName>
    <label>Totale Numero di Biglietti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>