force-app/main/default/objects/Reporting_Year__c/fields/Totale_Numero_Donazioni_formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Donazioni_formula__c</fullName>
    <formula>Totali_Donatore_Anno__r.Totale_Numero_Donazioni__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Numero Donazioni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>