force-app/main/default/objects/Reporting_Year__c/fields/Totale_Numero_Fatture_formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Fatture_formula__c</fullName>
    <formula>Totali_Donatore_Anno__r.Numero_Fatture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Numero Fatture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>