force-app/main/default/objects/Reporting_Year__c/listViews/Anni_di_Reportistica.listView-meta.xml
<ListView>
    <fullName>Anni_di_Reportistica</fullName>
    <columns>Anno__c</columns>
    <columns>Programma__c</columns>
    <columns>NAME</columns>
    <columns>Donor_Overview__c</columns>
    <columns>Ammontare_Originale_Donato_Anno_Corrente__c</columns>
    <columns>Current_Year_Donation_Amount__c</columns>
    <columns>Total_Invoice_Amount__c</columns>
    <columns>Available_Amount__c</columns>
    <columns>Total_Minutes_of_Visits__c</columns>
    <columns>Total_Visits_done__c</columns>
    <columns>Current_Year_Donation_Number__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Vista Donatore per Anno e Programma</label>
</ListView>